--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -53,7 +53,7 @@ jobs:
               $dirs_to_analyse \
               --fatal-unused
             dart run dart_code_metrics:metrics \
-              check-unused-code --[no-]verbose \ 
+              check-unused-code --verbose \ 
               $dirs_to_analyse \
               --fatal-unused
           fi
