workflow file edit to check

--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -53,10 +53,10 @@ jobs:
               $dirs_to_analyse \
               --fatal-unused
             dart run dart_code_metrics:metrics \
-              check-unused-code \
-              --verbose  
+              check-unused-code \  
               $dirs_to_analyse \
-              --fatal-unused
+              --fatal-unused \
+              --verbose 
           fi
 
       - name: Check formatting
