workflow file edit to check

--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -56,7 +56,7 @@ jobs:
               check-unused-code \  
               $dirs_to_analyse \
               --fatal-unused \
-              --verbose 
+              --[no-]verbose 
           fi
 
       - name: Check formatting
