--- a/.github/workflows/flutter.yaml
+++ b/.github/workflows/flutter.yaml
@@ -43,9 +43,6 @@ jobs:
           if [[ -n $dirs_to_analyse ]]
           then
           dirs_to_analyse="${dirs_to_analyse:1}"
-          echo "$dirs_to_analyze"
-          ls -l /home/runner/work/solid_software/solid_software/
-          pwd /home/runner/work/solid_software/solid_software/
             dart run dart_code_metrics:metrics \
               analyze \
               $dirs_to_analyse \
@@ -56,7 +53,7 @@ jobs:
               check-unused-files \
               $dirs_to_analyse \
               --fatal-unused
-            dart run dart_code_metrics:metrics check-unused-code $dirs_to_analyse --fatal-unused --verbose 
+            dart run dart_code_metrics:metrics check-unused-code $dirs_to_analyse --fatal-unused 
           fi
 
       - name: Check formatting
