--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,14 @@ environment:
   sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
-  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  mocktail: ^0.3.0
   solid_lints: ^0.0.16
 
 
 dev_dependencies:
+  build_runner: ^2.4.5
   flutter_test:
     sdk: flutter
 
