--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,1 +1,6 @@
 include: package:solid_lints/analysis_options.yaml
+dart_code_metrics:
+  rules:
+    - prefer-match-file-name:
+        exclude:
+          - test/**
